# robotframework

./: .git-blame-ignore-revs  .gitignore  .hgignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  BUILD.rst  CONTRIBUTING.md  CONTRIBUTING.rst  COPYRIGHT.txt  Dockerfile  INSTALL.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  PACKAGING.txt  README.rst  README.txt  SECURITY.md  azure-pipelines.yml  ci.md  ci.rst  codecov.yml  create-draft-prs.sh  data_driver.csv  employee.py  employee.robot  envjs.bootstrap.js  index.html  install.py  jasmine_tests.sh  klisgenes.py  log.html  output.xml  package.py  (+23 more)
.claude/: settings.local.json
.codeboarding/: Execution_Core.md  Test_Data_Management.md  User_Interface_Configuration.md  on_boarding.md
.github/: dependabot.yml
2.0/: RobotFrameworkUserGuide.html
2.0.1/: RobotFrameworkUserGuide.html
2.0.2/: RobotFrameworkUserGuide.html
2.0.3/: RobotFrameworkUserGuide.html
2.0.4/: RobotFrameworkUserGuide.html
2.1/: RobotFrameworkUserGuide.html
2.1.1/: RobotFrameworkUserGuide.html
2.1.2/: RobotFrameworkUserGuide.html
2.1.3/: RobotFrameworkUserGuide.html
2.5/: RobotFrameworkUserGuide.html
2.5.1/: RobotFrameworkUserGuide.html
2.5.2/: RobotFrameworkUserGuide.html
2.5.3/: RobotFrameworkUserGuide.html
2.5.4/: RobotFrameworkUserGuide.html
2.5.5/: RobotFrameworkUserGuide.html
2.5.6/: RobotFrameworkUserGuide.html
2.5.7/: RobotFrameworkUserGuide.html
2.6.0/: RobotFrameworkUserGuide.html
2.6.1/: RobotFrameworkUserGuide.html
2.6.2/: RobotFrameworkUserGuide.html
2.6.3/: RobotFrameworkUserGuide.html
2.7/: RobotFrameworkUserGuide.html
2.7.1/: RobotFrameworkUserGuide.html
2.7.2/: RobotFrameworkUserGuide.html
2.7.3/: RobotFrameworkUserGuide.html
2.7.4/: RobotFrameworkUserGuide.html
2.7.5/: RobotFrameworkUserGuide.html
2.7.6/: RobotFrameworkUserGuide.html
2.7.7/: RobotFrameworkUserGuide.html
2.8/: RobotFrameworkUserGuide.html
2.8.1/: RobotFrameworkUserGuide.html
2.8.2/: RobotFrameworkUserGuide.html
2.8.3/: RobotFrameworkUserGuide.html
2.8.4/: RobotFrameworkUserGuide.html
2.8.5/: RobotFrameworkUserGuide.html
2.8.6/: RobotFrameworkUserGuide.html
2.8.7/: RobotFrameworkUserGuide.html
2.9/: RobotFrameworkUserGuide.html
2.9.1/: RobotFrameworkUserGuide.html
2.9.2/: RobotFrameworkUserGuide.html
2.9a1/: RobotFrameworkUserGuide.html
2.9a2/: RobotFrameworkUserGuide.html
(+6553 files in other folders)
