[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "-e file:///C:/local_git_repos/robotframework#egg=robotframework",
]

[project]
name = "packed_robotframework"
description = "derived work from / inrobotframework"
dynamic = ["version"]
authors = [
    {name = "Pekka Klaerck", email = "peke@eliga.fi"}
]

dependencies = [
    "xmlschema>=2.1.1",
    "jsonschema>=4.17.3"
]
requires-python = ">=3.10"
license = {text = "-"}

[project.scripts]
robot = "robot:run_cli"